# ns3-DEFIANCE-MT

./: .gitlab-ci.yml  CMakeLists.txt  README.md  __init__.py  plot_training_progress.py  pyproject.toml
.github/workflows/: ci.yml  documentation.yml
doc/: groups.h
doc/source/: defiance-user-channel-interface.rst  index.rst
examples/: CMakeLists.txt  README.md
examples/addition-example/: README.md  addition-agent-app.cc  addition-agent-app.h  no-op-action-app.cc  no-op-action-app.h  node-id-reward-app.cc  node-id-reward-app.h  plot_training_curves.py  random-observation-app.cc  random-observation-app.h  simulation.cc
examples/agent-agent-communication/: agent-agent-communication.cc  observation-sharing.cc
examples/agent-communication-example/: README.md  agent-communication-example.cc  observation-sharing.cc
examples/ai-demo/: apb.cc
examples/app-communication-example/: README.md  mobility-agent-app.cc  mobility-agent-app.h  mobility-observation-app.cc  mobility-observation-app.h  position-action-app.cc  position-action-app.h  position-agent-app.cc  position-agent-app.h  position-observation-app.cc  position-observation-app.h  position-reward-app.cc  position-reward-app.h  simulation.cc
examples/application-communication-example/: application-communication-example.cc  send-to-agent.cc
examples/channel-interface-example/: README.md  channel-interface-example.cc
examples/handover/: README.md  handover-action-application.cc  handover-agent-application.cc  handover-agent-application.h  handover-observation-application.cc  handover-reward-application.h  handover-scenario-setup.cc  handover-scenario.cc  plot_training_curves.py
examples/handover-example/: README.md  handover-action-application.h  handover-agent-application.cc  handover-observation-application.h  handover-reward-application.cc  plot_handover_training_curves.py  simulation-setup.cc  simulation.cc  train.sh
examples/harl-tcp-prototype/: .gitignore  flowmon-parse-results.py  harl-tcp-scenario-setup.cc  harl-tcp-scenario.cc  plot-antenna-pattern.py  plot-harl-tcp-stats.py  plot-three-gpp-antenna.py  scenarios.sh  train.sh  uav_path.py
examples/harl-tcp-prototype/handover/: harl-tcp-handover-act-app.cc  harl-tcp-handover-act-app.h  harl-tcp-handover-agent-app.cc  harl-tcp-handover-agent-app.h  harl-tcp-handover-obs-app.cc  harl-tcp-handover-obs-app.h  harl-tcp-handover-rwd-app.cc  harl-tcp-handover-rwd-app.h
examples/lte-learning/: CMakeLists.txt  base-environment.cc  base-environment.h  device-manager.cc  device-manager.h  pc-environment.cc  pc-environment.h  pc-simulation.cc  static-environment.cc  static-environment.h  sumo-environment.cc  sumo-environment.h  topology-creator.cc  topology-creator.h
examples/observation-sharing-example/: README.md  observation-sharing-agent-app.cc  observation-sharing-agent-app.h  position-observation-app.cc  position-observation-app.h  simulation.cc
examples/scenario/: balance1-scenario.cc  balance2-scenario.cc  basic-lte-animation.cc  environment-creator-example.cc  environment-creator.cc  environment-creator.h
examples/scenario/pendulum-cart/: pendulum-cart.h  test-cart.cc
examples/sumo-test/: sumo-example.cc
examples/topology-creation/: sumo-topology-creator.cc
examples/uav-handover/: plot_training_curves.py  train.sh  uav-handover-action-application.cc  uav-handover-action-application.h  uav-handover-agent-application.cc  uav-handover-agent-application.h  uav-handover-analysis.py  uav-handover-observation-application.cc  uav-handover-observation-application.h  uav-handover-reward-application.cc  uav-handover-reward-application.h  uav-handover-scenario-setup.cc  uav-handover-scenario.cc
experiments/: runTest0.py  runTest3_1.py  runTest3_2.py  runTest4_1.py  runTest4_2.py
helper/: communication-helper.cc  communication-helper.h  defiance-helper.h  rl-application-helper.cc  rl-application-helper.h
model/: action-application.h  agent-application.cc  agent-application.h  aggregated-info.cc  aggregated-info.h  base-test.cc  base-test.h  channel-interface.cc  channel-interface.h  data-collector-application.cc  data-collector-application.h  history-container.h  observation-application.h  reward-application.h  rl-application-container.h  rl-application.cc  rl-application.h  simple-channel-interface.cc  simple-channel-interface.h  socket-channel-interface.cc  socket-channel-interface.h
model/agents/: __main__.py  debug.py  ray.py
model/agents/single/: debug.py  ray.py
templates/: action-application-template.cc  agent-application-template.cc  observation-application-template.cc  reward-application-template.cc
test/: action-application-test.cc  agent-application-test.cc  communication-test.cc  data-collector-application-test.cc  examples-to-run.py  history-container-test.cc  marl-interface-test.cc  rl-application-test.cc  simple-channel-interface-test.cc  socket-channel-interface-test.cc  test_marl_interface.py
